[gd_scene load_steps=8 format=3 uid="uid://tb6s65g7ub4q"]

[ext_resource type="Script" uid="uid://yup3w5b6ydlv" path="res://escenas/usuario/Perfil/editar_perfil.gd" id="1_wkyxs"]
[ext_resource type="Texture2D" uid="uid://dpu72kxvllbfy" path="res://assets/sprites/ui/Logros/caja de cartón .png" id="1_xvlxl"]
[ext_resource type="Texture2D" uid="uid://blg67gg5afvfk" path="res://assets/sprites/ui/Menu/persona B.png" id="2_wkyxs"]
[ext_resource type="Texture2D" uid="uid://1ly7vb0unt2y" path="res://assets/sprites/ui/lápiz.png" id="3_qu4ue"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b45wd"]
texture = ExtResource("2_wkyxs")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fksbu"]
texture = ExtResource("3_qu4ue")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gyqkp"]
bg_color = Color(0.289513, 0.191113, 0.449654, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[node name="EditarPerfil" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wkyxs")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.156863, 0.211765, 1)

[node name="FotoPerfil" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 182.0
offset_top = 67.0
offset_right = 527.0
offset_bottom = 412.0
texture = ExtResource("1_xvlxl")
expand_mode = 2

[node name="perfil" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.796
anchor_right = 0.947
anchor_bottom = 0.112
offset_left = -0.120056
offset_top = 39.0
offset_right = 0.159973
offset_bottom = -0.360001
theme_override_styles/normal = SubResource("StyleBoxTexture_b45wd")

[node name="NombreUsuario" type="Label" parent="."]
layout_mode = 0
offset_left = 142.0
offset_top = 538.0
offset_right = 604.0
offset_bottom = 632.0
theme_override_font_sizes/font_size = 26
text = "Nombre de usuario"
horizontal_alignment = 1
vertical_alignment = 1

[node name="editar_nombre" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.203
anchor_top = 0.426
anchor_right = 0.831
anchor_bottom = 0.478
offset_left = -0.160004
offset_top = -0.280029
offset_right = -0.320007
offset_bottom = 0.159973

[node name="ed_nombre" type="Button" parent="."]
layout_mode = 0
offset_left = 79.0
offset_top = 560.0
offset_right = 136.0
offset_bottom = 611.0
theme_override_styles/normal = SubResource("StyleBoxTexture_fksbu")

[node name="contraseña" type="Label" parent="."]
layout_mode = 0
offset_left = 145.0
offset_top = 639.0
offset_right = 607.0
offset_bottom = 719.0
theme_override_font_sizes/font_size = 26
text = "contraseña"
horizontal_alignment = 1
vertical_alignment = 1

[node name="editar_contraseña" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.322
anchor_top = 0.5
anchor_right = 0.739
anchor_bottom = 0.552
offset_left = 0.159973
offset_right = -0.0800171
offset_bottom = 0.439941

[node name="ed_contraseña" type="Button" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 651.0
offset_right = 217.0
offset_bottom = 702.0
theme_override_styles/normal = SubResource("StyleBoxTexture_fksbu")

[node name="cerrarSesion" type="Button" parent="."]
layout_mode = 0
offset_left = 187.0
offset_top = 890.0
offset_right = 535.0
offset_bottom = 947.0
theme_override_font_sizes/font_size = 23
theme_override_styles/normal = SubResource("StyleBoxFlat_gyqkp")
text = "Cerrar sesión"

[node name="fotoPerfil" type="Label" parent="."]
layout_mode = 0
offset_left = 136.0
offset_top = 452.0
offset_right = 598.0
offset_bottom = 546.0
theme_override_font_sizes/font_size = 26
text = "Foto de perfil"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ed_foto" type="Button" parent="."]
layout_mode = 0
offset_left = 122.0
offset_top = 468.0
offset_right = 179.0
offset_bottom = 519.0
theme_override_styles/normal = SubResource("StyleBoxTexture_fksbu")

[node name="guardar" type="Button" parent="."]
layout_mode = 0
offset_left = 251.0
offset_top = 785.0
offset_right = 467.0
offset_bottom = 842.0
theme_override_font_sizes/font_size = 23
theme_override_styles/normal = SubResource("StyleBoxFlat_gyqkp")
text = "Guardar
"

[node name="borrarCuenta" type="Button" parent="."]
layout_mode = 0
offset_left = 185.0
offset_top = 991.0
offset_right = 544.0
offset_bottom = 1048.0
theme_override_font_sizes/font_size = 23
theme_override_styles/normal = SubResource("StyleBoxFlat_gyqkp")
text = "Borrar cuenta"

[connection signal="pressed" from="perfil" to="." method="_on_perfil_pressed"]
[connection signal="pressed" from="cerrarSesion" to="." method="_on_cerrar_sesion_pressed"]
[connection signal="pressed" from="guardar" to="." method="_on_guardar_pressed"]
[connection signal="pressed" from="borrarCuenta" to="." method="_on_borrar_cuenta_pressed"]
